k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudcart
  labels:
    app.kubernetes.io/name: cloudcart
    app.kubernetes.io/part-of: cloudcart
